<resources>
    <string name="app_name">SwitchWeather</string>

    <string name="temp_temperature">26</string>
    <string name="more_day">MORE DAY</string>
    <string name="city_name">ShenZhen</string>
    <string name="weather_describe">Mostly Cloudy</string>
    <string name="gap"> | </string>
    <string name="min_temperature">20°</string>
    <string name="max_temperature">28°</string>
    <string name="today">Today · </string>
    <string name="date_is">Aug 20</string>
    <string name="now_time">Now</string>
    <string name="now_time_is">12:00</string>
    <string name="weekday_is">Saturday</string>
    <string name="placeholder_text">placeholder</string>
    <string name="update_time">Just update</string>

    <string name="loading">loading...</string>
    <string name="network_is_not_available">Network is not available</string>
    <string name="retry_to_connect">Retry</string>
    <string name="add_city">Add City</string>
    <string name="update_failed">Update Failed</string>
    <string name="update_text"> Update</string>
    <string name="yesterday_text">Yesterday</string>
    <string name="today_text">Today</string>
    <string name="tomorrow_text">Tomorrow</string>
    <string name="just_text">Just</string>
    <string name="minutes_text">minutes ago </string>
    <string name="update_in_progress">Update in progress</string>
    <string name="setting_text">Settings</string>
    <string name="edit_text">Edit City</string>
    <string name="search_view_hint_text">Enter the city name</string>
    <string name="comma">,</string>
    <string name="feedback_text">Feedback</string>
    <string name="communicate_text">Communicate</string>
    <string name="search_city">Search City</string>
    <string name="add_successful">Add successful</string>
    <string name="no_city_notice">Don\'t have a city, Please add.</string>
    <string name="city_text">Own City</string>
    <string name="location_city">Current Location</string>
    <string name="delete_text">Delete</string>
    <string name="not_use_network">Do not use the network</string>
    <string name="push_setting_text">Push Setting</string>
    <string name="auto_update_text">Update Push City in Background</string>
    <string name="auto_update_summary_text">Update every 6 hours, specially recommended to business travellers.</string>
    <string name="general_setting_text">General Settings</string>
    <string name="sunrise_notification_text">Sunrise Notification</string>
    <string name="sunset_notification_text">Sunset Notification</string>
    <string name="poor_air_text">Poor Air Quality Notification</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="notification_widget">Notification Widget</string>
    <string name="celsius">Celsius °C</string>
    <string name="celsius_sign">°C</string>
    <string name="fahrenheit">Fahrenheit °F</string>
    <string name="fahrenheit_sign">°F</string>
    <string name="other_setting">Others</string>
    <string name="about_text">About</string>

    <string name="aboutLibraries_description_name">Switch Weather</string>
    <string name="aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion">true</string>
    <string name="aboutLibraries_description_text"><![CDATA[This is a weather information app in Material Design. <br /><br /><b>You can fork me on <a href="https://github.com/mcxinyu/SwitchWeather">GitHub</a> </b>]]></string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper venenatis, magna odio volutpat
        velit, at ullamcorper nulla lacus sed turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed
        nisl sem, ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

    <string name="next_take_effect">Take effect when you restart</string>
    <string name="loading_data">Loading Data</string>
    <string name="loading_success">Loading Success</string>
    <string name="notification_widget_summary">Using The Location City</string>
    <string name="temp_temperature_degree">°</string>
    <string name="wind_class_text"> Class</string>
    <string name="percent_sign">%</string>
    <string name="pressure_sign">hpa</string>
    <string name="title_activity_demo">DemoActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="email_address">mcxinyu@gmail.com</string>
    <string name="email_subject">Feedback</string>

    <string name="iconfont_wind">&#xe717;</string>
    <string name="iconfont_hum_today">&#xe60f;空气湿度</string>
    <string name="iconfont_fl_today">&#xe604;体感温度</string>
    <string name="iconfont_aqi">&#xe602;</string>
    <string name="iconfont_visibility_today">&#xe733;能见度</string>
    <string name="iconfont_pres_today">&#xe735;气体气压</string>
    <string name="iconfont_uv_today">&#xe729;紫外线</string>

    <string name="aqi_title">空气质量</string>
    <string name="aqi_main_polluted">主要污染物</string>
    <string name="aqi_afeect">对健康的影响</string>
    <string name="aqi_suggestion">建议采取的措施</string>

    <string name="aqi_affect_excellent">空气质量令人满意，基本无空气污染。</string>
    <string name="aqi_affect_good">空气质量可接受，某些污染物对极少数敏感人群健康有较弱影响。</string>
    <string name="aqi_affect_lightly">易感人群有症状有轻度加剧，健康人群出现刺激症状。</string>
    <string name="aqi_affect_moderately">进一步加剧易感人群症状，会对健康人群的呼吸系统有影响。</string>
    <string name="aqi_affect_heavily">心脏病和肺病患者症状加剧运动耐受力降低，健康人群出现症状。</string>
    <string name="aqi_affect_severely">健康人群运动耐受力降低，有明显强烈症状，可能导致疾病。</string>

    <string name="aqi_suggestion_excellent">各类人群可正常活动。</string>
    <string name="aqi_suggestion_good">极少数敏感人群应减少户外活动。</string>
    <string name="aqi_suggestion_lightly">老人、儿童、呼吸系统等疾病患者减少长时间、高强度的户外活动。</string>
    <string name="aqi_suggestion_moderately">儿童、老人、呼吸系统等疾病患者及一般人群减少户外活动。</string>
    <string name="aqi_suggestion_heavily">儿童、老人、呼吸系统等疾病患者及一般人群停止或减少户外运动。</string>
    <string name="aqi_suggestion_severely">儿童、老人、呼吸系统等疾病患者及一般人群停止户外活动。</string>

    <string name="aqi_appeal">众多国家，一个大气层。</string>
    <string name="suggestion_uv">紫外线指数</string>
    <string name="suggestion_sport">运动指数</string>
    <string name="suggestion_cw">洗车指数</string>
    <string name="suggestion_drsg">穿衣指数</string>
    <string name="suggestion_flu">感冒指数</string>
    <string name="suggestion_comf">舒适度指数</string>
    <string name="suggestion_hum">湿度</string>
    <string name="suggestion_rang">温度范围</string>
    <string name="suggestion_wing">风力风向</string>
    <string name="suggestion_cond">天气状况</string>
    <string name="suggestion_tmp_short">昼夜温差</string>
    <string name="suggestion_sr_ss">日出日落</string>
    <string name="search_city_hint">城市中英文名/IP/经纬度</string>
    <string name="cai_yun_weather">彩云天气© 提供气象信息</string>
    <string name="location_failed">获取当前位置失败</string>
    <string name="get_locatoin">定位中...</string>
    <string name="at_least_add_one_city">请至少添加一个城市</string>
    <string name="aqi_forecast">空气质量预报</string>
</resources>
