<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general_setting_text">
        <SwitchPreference
                android:title="@string/location_city"
                android:key="setting_location_city"
                android:defaultValue="true"/>
        <SwitchPreference
            android:title="@string/notification_widget"
            android:dependency="setting_location_city"
            android:key="setting_notification_service"
            android:summary="@string/notification_widget_summary"
            android:defaultValue="false"/>
        <ListPreference
                android:title="@string/temperature_unit"
                android:key="setting_temperature_unit"
                android:dialogTitle="@string/temperature_unit"
                android:defaultValue="C"
                android:entryValues="@array/settings_entry_values_auto_update"
                android:entries="@array/settings_entries_auto_update"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/push_setting_text">
        <SwitchPreference
                android:title="@string/auto_update_text"
                android:key="setting_auto_update_text"
                android:defaultValue="false"
                android:summary="@string/auto_update_summary_text"/>
        <SwitchPreference
                android:title="@string/poor_air_text"
                android:key="setting_poor_air_text"
                android:defaultValue="false"/>
        <SwitchPreference
                android:title="@string/sunrise_notification_text"
                android:key="setting_sunrise_notification_text"
                android:defaultValue="false"/>
        <SwitchPreference
                android:title="@string/sunset_notification_text"
                android:key="setting_sunset_notification_text"
                android:defaultValue="false"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/other_setting">
        <PreferenceScreen
                android:title="@string/about_text"
                android:key="setting_about">
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/feedback_text"
            android:key="setting_feedback">
        </PreferenceScreen>
        <Preference android:summary="没有工作室 No own a house"/>
    </PreferenceCategory>

</PreferenceScreen>