<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/city_text"
          android:id="@+id/item_city_list">
        <menu>
            <item
                    android:id="@+id/edit_city_list"
                    android:icon="@drawable/edit_city"
                    android:title="@string/edit_text"/>
            <group android:id="@+id/menu_group_city_list"
                   android:checkableBehavior="single">
            </group>
        </menu>
    </item>

    <item android:title="@string/communicate_text"
          android:orderInCategory="999">
        <menu>
            <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/setting_text"/>
            <item
                    android:id="@+id/nav_feedback"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/feedback_text"/>
        </menu>
    </item>

</menu>
