<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_add"
          android:title="@string/add_city"
          android:icon="@drawable/ic_menu_more_white"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_edit_city"
          android:title="@string/edit_text"
          android:icon="@drawable/ic_menu_more_white"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_settings"
          android:title="@string/setting_text"
          android:icon="@drawable/ic_menu_more_white"
          app:showAsAction="never"/>
    <!--<item android:id="@+id/menu_feedback"-->
          <!--android:title="@string/feedback_text"-->
          <!--android:icon="@drawable/ic_menu_more_white"-->
          <!--app:showAsAction="never"/>-->
</menu>