<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.about.switchweather.MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:clipChildren="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RelativeLayout
                android:id="@+id/date_info_view"
                android:gravity="center_horizontal"
                android:layout_weight="0.8"
                android:layout_width="match_parent"
                android:layout_height="0dp">
            <LinearLayout
                    android:id="@+id/today_linear_view"
                    android:orientation="horizontal"
                    android:layout_centerInParent="true"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/weekday_is_text_view"
                        android:text="@string/weekday_is"
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:text="@string/gap"
                        android:textSize="17sp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/date_is_text_view"
                        android:text="@string/date_is"
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_above="@id/today_linear_view"
                    android:layout_alignLeft="@id/today_linear_view"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/now_time_is_text_view"
                        android:text="@string/now_time_is"
                        android:textSize="36sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:text="@string/now_time"
                        android:textSize="17sp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
                android:background="@color/colorShadow"
                android:layout_weight="1"
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="0dp">
            <RelativeLayout
                    android:id="@+id/more_view"
                    android:layout_marginTop="2dp"
                    android:background="@color/colorWhite"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="80dp">
                <TextView
                        android:text="@string/more_day"
                        android:textSize="30sp"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </RelativeLayout>
            <RelativeLayout
                    android:id="@+id/weather_view"
                    android:background="@color/colorWhite"
                    android:clipChildren="false"
                    android:layout_above="@id/more_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <LinearLayout
                        android:id="@+id/weather_info_view"
                        android:layout_centerInParent="true"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp">
                    <ImageView
                            android:id="@+id/weather_image_view"
                            android:src="@drawable/mostly_cloudy"
                            android:scaleType="centerInside"
                            android:layout_width="60dp"
                            android:layout_height="60dp"/>
                    <TextView
                            android:id="@+id/weather_describe_text_view"
                            android:text="@string/weather_describe"
                            android:textSize="20sp"
                            android:layout_marginLeft="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:text="@string/gap"
                            android:textSize="30sp"
                            android:layout_marginLeft="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:id="@+id/min_temperature_text_view"
                            android:text="@string/min_temperature"
                            android:textSize="20sp"
                            android:textColor="@color/colorTemperature"
                            android:layout_marginLeft="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:id="@+id/max_temperature_text_view"
                            android:text="@string/max_temperature"
                            android:textSize="20sp"
                            android:textColor="@color/colorTemperature"
                            android:layout_marginLeft="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
                <TextView
                        android:id="@+id/city_name_text_view"
                        android:layout_below="@id/weather_info_view"
                        android:layout_centerHorizontal="true"
                        android:text="@string/city_name"
                        android:textSize="24sp"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/temperature_text_view"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="-90dp"
                        android:text="@string/temp_temperature"
                        android:textSize="130sp"
                        android:textColor="@color/colorTemperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>