<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/main_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        tools:context=".UI.MainUI.MainActivity">
        <ImageView
            android:src="@drawable/background"
            android:alpha="50"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:clipChildren="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/date_info_view"
                android:gravity="center_horizontal"
                android:layout_weight="0.6"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <LinearLayout
                    android:id="@+id/today_linear_view"
                    android:orientation="horizontal"
                    android:layout_centerInParent="true"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextClock
                        android:id="@+id/weekday_is_text_clock"
                        tools:text="@string/weekday_is"
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:format12Hour="EEEE"
                        android:format24Hour="EEEE"/>
                    <TextView
                        android:text="@string/gap"
                        android:textSize="17sp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextClock
                        android:id="@+id/date_is_text_clock"
                        tools:text="@string/weekday_is"
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:format12Hour="MMM dd"
                        android:format24Hour="MMM dd"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_above="@id/today_linear_view"
                    android:layout_alignLeft="@id/today_linear_view"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextClock
                        android:id="@+id/now_time_is_text_clock"
                        android:textSize="36sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:format12Hour="h:mmaa"
                        android:format24Hour="H:mm"/>
                    <TextView
                        android:text="@string/now_time"
                        android:textSize="12sp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:background="@color/colorShadow"
                android:layout_weight="1"
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/daily_forecast_recycler_view"
                    android:layout_marginTop="2dp"
                    android:background="@color/colorWhite"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:scrollbars="none">
                </android.support.v7.widget.RecyclerView>
                <RelativeLayout
                    android:id="@+id/weather_view"
                    android:background="@color/colorWhite"
                    android:clipChildren="false"
                    android:layout_above="@id/daily_forecast_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RelativeLayout
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="-90dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/temperature_text_view"
                            android:layout_centerInParent="true"
                            tools:text="@string/temp_temperature"
                            android:textSize="130sp"
                            android:textColor="@color/colorTemperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <!--<TextView-->
                            <!--android:id="@+id/update_time_text_view"-->
                            <!--android:layout_toRightOf="@id/temperature_text_view"-->
                            <!--android:layout_centerVertical="true"-->
                            <!--tools:text="@string/update_time"-->
                            <!--android:textSize="12sp"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"/>-->
                    </RelativeLayout>
                    <LinearLayout
                        android:id="@+id/weather_info_view"
                        android:layout_centerInParent="true"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp">
                        <ImageView
                            android:id="@+id/weather_image_view"
                            tools:src="@drawable/weather_icon_506"
                            android:scaleType="centerInside"
                            android:layout_width="60dp"
                            android:layout_height="60dp"/>
                        <TextView
                            android:id="@+id/weather_describe_text_view"
                            tools:text="@string/weather_describe"
                            android:textSize="20sp"
                            android:layout_marginLeft="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:text="@string/gap"
                            android:textSize="30sp"
                            android:layout_marginLeft="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/min_temperature_text_view"
                            tools:text="@string/min_temperature"
                            android:textSize="20sp"
                            android:textColor="@color/colorTemperature"
                            android:layout_marginLeft="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/max_temperature_text_view"
                            tools:text="@string/max_temperature"
                            android:textSize="20sp"
                            android:textColor="@color/colorTemperature"
                            android:layout_marginLeft="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/city_name_text_view"
                        android:layout_below="@id/weather_info_view"
                        android:layout_centerHorizontal="true"
                        tools:text="@string/city_name"
                        android:textSize="28sp"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:layout_below="@id/city_name_text_view"
                        android:visibility="gone"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/placeholder_text"
                            android:textSize="24sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:text="@string/placeholder_text"
                            android:textSize="24sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:text="@string/placeholder_text"
                            android:textSize="24sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:text="@string/placeholder_text"
                            android:textSize="24sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:text="@string/placeholder_text"
                            android:textSize="24sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:text="qwertyuiopasdfghjklzxcvbnm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="qwertyuiopasdfghjklzxcvbnm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="qwertyuiopasdfghjklzxcvbnm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</android.support.v4.widget.SwipeRefreshLayout>
